# arbitrarycomposer

./: .actrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  gcovr.cfg  project.tjp
examples/host-interactive/: CMakeLists.txt  README.md  main.cpp
examples/host-offline/: CMakeLists.txt  README.md  main.cpp
examples/plugin-template/: CMakeLists.txt  template_plugin.cpp
plugins/image/: CMakeLists.txt  image_content.cpp  image_plugin.cpp
plugins/imageseq/: CMakeLists.txt  imageseq_content.cpp  imageseq_plugin.cpp  imdec.cpp
plugins/imdec/: CMakeLists.txt  imdec.cpp
plugins/miniaudio/: CMakeLists.txt  maudio.cpp  miniaudio_plugin.cpp  miniaudio_sink.cpp
src/: CMakeLists.txt  builtin_kinds.cpp  version.cpp
src/api/arbc/: arbc_api.h  builtin_kinds.hpp
src/arbc/: version.hpp.in
src/audio_engine/: CMakeLists.txt  lookahead.cpp  mix.cpp
src/audio_engine/t/: lookahead.t.cpp  mix.t.cpp
src/backend_cpu/: CMakeLists.txt  cpu_backend.cpp  kernels.hpp
src/backend_cpu/t/: cpu_backend.t.cpp  kernel_goldens.t.cpp
src/base/: CMakeLists.txt  rational_time.cpp  rt_safety.cpp  sha256.cpp  transform.cpp
src/base/t/: expected.t.cpp  hash_mix.t.cpp  ids.t.cpp  rational_time.t.cpp  rt_safety.t.cpp  sha256.t.cpp  transform.t.cpp
src/cache/: CMakeLists.txt
src/cache/t/: invalidation.t.cpp  key_shapes.t.cpp  keyed_store.t.cpp  prefetch.t.cpp
src/compositor/: CMakeLists.txt  anchored_viewports.cpp  compositor.cpp  damage_planning.cpp  operator_graph.cpp  pull_service.cpp  refinement.cpp  tile_planning.cpp
src/compositor/t/: anchored_viewports.t.cpp  counters.t.cpp  damage_planning.t.cpp  operator_graph.t.cpp  pull_service.t.cpp  refinement.t.cpp  scale_ladder.t.cpp  temporal_cache.t.cpp  temporal_coalescing.t.cpp  temporal_placement_culling.t.cpp  tile_planning.t.cpp
src/contract/: CMakeLists.txt  content.cpp  registry.cpp  render_completion.cpp
src/contract/t/: async_render.t.cpp  audio_facet.t.cpp  operator_members.t.cpp  playback_hint.t.cpp  registry.t.cpp  snapshot_pins.t.cpp  temporal_fields.t.cpp
src/kind_crossfade/: CMakeLists.txt  crossfade_content.cpp
src/kind_crossfade/t/: crossfade_position.t.cpp
src/kind_fade/: CMakeLists.txt  fade_content.cpp
src/kind_fade/t/: fade_envelope.t.cpp
src/kind_nested/: CMakeLists.txt  nested_content.cpp
src/kind_nested/t/: nested_audio_meta.t.cpp  nested_meta.t.cpp
src/kind_raster/: CMakeLists.txt  raster_content.cpp
src/kind_raster/t/: raster_goldens.t.cpp  raster_paint.t.cpp  raster_pool_backing.t.cpp  raster_tilewise_load.t.cpp
src/kind_solid/: CMakeLists.txt  solid_content.cpp
src/kind_tone/: CMakeLists.txt  tone_content.cpp
src/kind_tone/t/: tone_goldens.t.cpp  tone_rates.t.cpp
src/media/: CMakeLists.txt  audio_resampler.cpp  image_resampler.cpp  pixel_format.cpp
src/media/t/: audio_format.t.cpp  audio_resampler.t.cpp  image_resampler.t.cpp  pixel_format.t.cpp  (+2 more)
src/model/: CMakeLists.txt  journal.cpp  model.cpp
src/pool/: CMakeLists.txt  big_block_pool.cpp  slot_store.cpp  workspace_file.cpp
src/runtime/: CMakeLists.txt  asset_gc.cpp  audio_worker_pool.cpp  binder_nested.cpp  codec_crossfade.cpp  codec_fade.cpp  codec_image.cpp  codec_nested.cpp  codec_raster.cpp  codec_solid.cpp  codec_tone.cpp  damage_router.cpp  device_monitor.cpp  device_sink.cpp  document.cpp  document_access.hpp  document_serialize.cpp  editable_binding.cpp  export_monitor.cpp  external_asset_loader.cpp  external_composition_loader.cpp  filesystem_asset_sink.cpp  filesystem_asset_source.cpp  host_viewport.cpp  housekeeping.cpp  housekeeping_thread.cpp  interactive.cpp  lookahead_pump.cpp  offline.cpp  offline_sequence.cpp  operator_binding.cpp  pending_external_loads.cpp  playback_hints.cpp  plugin_host.cpp  pull_identity.cpp  raster_tile_store.cpp  recovered_state_replay.cpp  tile_decode_dispatch.cpp  tile_encode_dispatch.cpp  transport.cpp  (+2 more)
src/serialize/: CMakeLists.txt  asset_reaper.cpp  blob_compress.cpp  codec.cpp  load_context.cpp  placeholder_content.cpp  reader.cpp  save_context.cpp  tile_blob.cpp  unknown_fields.cpp  writer.cpp
src/surface/: CMakeLists.txt  surface.cpp  surface_pool.cpp
tests/: CMakeLists.txt  anchored_viewports_golden.t.cpp  arena_growth_litmus.t.cpp  asset_gc.t.cpp  async_external_load.t.cpp  async_external_load_golden.t.cpp  audio_blockkey_spatial_disambiguation.t.cpp  audio_export_goldens.t.cpp  audio_lookahead_concurrency.t.cpp  audio_lookahead_recursive.t.cpp  audio_lookahead_spatial_nested.t.cpp  audio_mix_goldens.t.cpp  bounded_content_tile_clip_golden.t.cpp  contract_conformance.t.cpp  crossfade_conformance.t.cpp  crossfade_goldens.t.cpp  crossfade_identity_counter.t.cpp  crossfade_offline_dissolve.t.cpp  crossfade_runtime_binding.t.cpp  damage_planning_golden.t.cpp  device_monitor_concurrency.t.cpp  document_compositions_golden.t.cpp  document_content_binding_concurrency.t.cpp  document_serialize_concurrency.t.cpp  document_serialize_golden.t.cpp  document_workspace_checkpoint.t.cpp  dual_build.t.cpp  fade_conformance.t.cpp  fade_goldens.t.cpp  fade_identity_counter.t.cpp  fade_runtime_binding.t.cpp  fuzz_corpus_replay.t.cpp  host_viewport_reanchor_golden.t.cpp  host_viewport_writer_identity.t.cpp  image_async_pending.t.cpp  image_async_pending_golden.t.cpp  image_budget.t.cpp  image_concurrency_stress.t.cpp  image_conformance.t.cpp  image_containment.t.cpp  (+87 more)
tests/ci_plugins/: ci_kinds.hpp  crossfade_ci_plugin.cpp  fade_ci_plugin.cpp  nested_ci_plugin.cpp  passthrough_ci_plugin.cpp  raster_ci_plugin.cpp  solid_ci_plugin.cpp  tone_ci_plugin.cpp
tests/claims/: registry.tsv
tests/consumer/: CMakeLists.txt  conformance_consumer.cpp  core_metadata.cpp  core_only.cpp  host_example_artifacts.cpp  pkgconfig_probe.cpp  plugin_default_scan.cpp  plugin_scan.cpp  plugin_template_load.cpp  run_staged_install.cmake
tests/fixtures/: noentry_plugin.cpp
tests/fuzz/: fuzz_load_document.cpp  fuzz_target.hpp
tests/support/: image_fixtures.hpp  imageseq_fixtures.hpp  root_anchor.hpp  schedule_perturb.hpp
(+457 files in other folders)
